--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import mlflow"
    ]
   },
   {
@@ -32,6 +34,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%pwd"
    ]
@@ -42,9 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"MLFLOW_TRACKING_URI\"]=\"https://dagshub.com/live4rush/End_to_end_MLOPS_project.mlflow\"\n",
-    "os.environ[\"MLFLOW_TRACKING_USERNAME\"]=\"live4rush\"\n",
-    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"dadf012110ee99e2552548689da7b2d2b7636dec\"\n"
+    "load_dotenv()\n",
+    "mlflow.set_tracking_uri(os.getenv(\"MLFLOW_TRACKING_URI\"))\n",
+    "os.environ.get(\"MLFLOW_TRACKING_USERNAME\")\n",
+    "os.environ.get(\"MLFLOW_TRACKING_PASSWORD\")"
    ]
   },
   {
@@ -112,7 +122,7 @@
     "            all_params=params,\n",
     "            metric_file_name = config.metric_file_name,\n",
     "            target_column = schema.name,\n",
-    "            mlflow_uri=\"https://dagshub.com/live4rush/End_to_end_MLOPS_project.mlflow\",\n",
+    "            mlflow_uri=\"https://dagshub.com/ArtemStrashko/end_to_end_mlops_project.mlflow\",\n",
     "           \n",
     "        )\n",
     "\n",
@@ -223,7 +233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "end-to-end-mlops-project-F3h23aZZ-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -237,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
