mlflow credential in the code when using docker

--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -51,7 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv()\n",
+    "if os.path.exists(\".env\"):\n",
+    "    load_dotenv()  # Load environment variables from .env if available\n",
+    "    print(\"Loaded .env file for local development\")\n",
+    "    \n",
     "mlflow.set_tracking_uri(os.getenv(\"MLFLOW_TRACKING_URI\"))\n",
     "os.environ.get(\"MLFLOW_TRACKING_USERNAME\")\n",
     "os.environ.get(\"MLFLOW_TRACKING_PASSWORD\")"
