--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -6,7 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "from mlProject import logger\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import joblib"
    ]
   },
   {
@@ -52,8 +57,7 @@
     "    train_data_path: Path\n",
     "    test_data_path: Path\n",
     "    model_name: str\n",
-    "    alpha: float\n",
-    "    l1_ratio: float\n",
+    "    n_estimators: float\n",
     "    target_column: str"
    ]
   },
@@ -89,7 +93,7 @@
     "\n",
     "    def get_model_trainer_config(self) -> ModelTrainerConfig:\n",
     "        config = self.config.model_trainer\n",
-    "        params = self.params.ElasticNet\n",
+    "        params = self.params.RandomForestClassifier\n",
     "        schema =  self.schema.TARGET_COLUMN\n",
     "\n",
     "        create_directories([config.root_dir])\n",
@@ -99,26 +103,12 @@
     "            train_data_path = config.train_data_path,\n",
     "            test_data_path = config.test_data_path,\n",
     "            model_name = config.model_name,\n",
-    "            alpha = params.alpha,\n",
-    "            l1_ratio = params.l1_ratio,\n",
+    "            n_estimators = params.n_estimators,\n",
     "            target_column = schema.name\n",
     "            \n",
     "        )\n",
     "\n",
     "        return model_trainer_config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import os\n",
-    "from mlProject import logger\n",
-    "from sklearn.linear_model import ElasticNet\n",
-    "import joblib"
    ]
   },
   {
@@ -138,15 +128,17 @@
     "\n",
     "\n",
     "        train_x = train_data.drop([self.config.target_column], axis=1)\n",
-    "        test_x = test_data.drop([self.config.target_column], axis=1)\n",
-    "        train_y = train_data[[self.config.target_column]]\n",
-    "        test_y = test_data[[self.config.target_column]]\n",
+    "        # test_x = test_data.drop([self.config.target_column], axis=1)\n",
+    "        train_y = train_data[self.config.target_column]\n",
+    "        # test_y = test_data[[self.config.target_column]]\n",
+    "\n",
+    "        print(train_data.shape, train_x.shape, train_y.shape)\n",
     "\n",
     "\n",
-    "        lr = ElasticNet(alpha=self.config.alpha, l1_ratio=self.config.l1_ratio, random_state=42)\n",
-    "        lr.fit(train_x, train_y)\n",
+    "        model = RandomForestClassifier(n_estimators=self.config.n_estimators, random_state=42)\n",
+    "        model.fit(train_x, train_y)\n",
     "\n",
-    "        joblib.dump(lr, os.path.join(self.config.root_dir, self.config.model_name))\n",
+    "        joblib.dump(model, os.path.join(self.config.root_dir, self.config.model_name))\n",
     "\n"
    ]
   },
@@ -170,7 +162,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_data = pd.read_csv(config.get_model_trainer_config().train_data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "td = train_data.drop([\"quality\"], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "td"
+   ]
   },
   {
    "cell_type": "code",
@@ -182,7 +203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "end-to-end-mlops-project-F3h23aZZ-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -196,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
