--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -113,7 +113,7 @@
     "    \n",
     "    def get_model_evaluation_config(self) -> ModelEvaluationConfig:\n",
     "        config = self.config.model_evaluation\n",
-    "        params = self.params.ElasticNet\n",
+    "        params = self.params.RandomForestClassifier\n",
     "        schema =  self.schema.TARGET_COLUMN\n",
     "\n",
     "        create_directories([config.root_dir])\n",
@@ -140,7 +140,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.metrics import classification_report\n",
     "from urllib.parse import urlparse\n",
     "import mlflow\n",
     "import mlflow.sklearn\n",
@@ -159,11 +159,17 @@
     "        self.config = config\n",
     "\n",
     "    \n",
-    "    def eval_metrics(self,actual, pred):\n",
-    "        rmse = np.sqrt(mean_squared_error(actual, pred))\n",
-    "        mae = mean_absolute_error(actual, pred)\n",
-    "        r2 = r2_score(actual, pred)\n",
-    "        return rmse, mae, r2\n",
+    "    def eval_metrics(self, y_true, y_pred):\n",
+    "        # Initialize result dictionary\n",
+    "        results = {}\n",
+    "\n",
+    "        # Precision, recall, and F1-score\n",
+    "        class_report = classification_report(y_true, y_pred, output_dict=True)\n",
+    "        results[\"precision\"] = class_report[\"macro avg\"][\"precision\"]\n",
+    "        results[\"recall\"] = class_report[\"macro avg\"][\"recall\"]\n",
+    "        results[\"f1_score\"] = class_report[\"macro avg\"][\"f1-score\"]\n",
+    "\n",
+    "        return results\n",
     "    \n",
     "\n",
     "\n",
@@ -182,19 +188,17 @@
     "\n",
     "        with mlflow.start_run():\n",
     "\n",
-    "            predicted_qualities = model.predict(test_x)\n",
-    "\n",
-    "            (rmse, mae, r2) = self.eval_metrics(test_y, predicted_qualities)\n",
+    "            predicted_labels = model.predict(test_x)\n",
+    "            scores = self.eval_metrics(y_true = test_y, y_pred = predicted_labels)\n",
     "            \n",
     "            # Saving metrics as local\n",
-    "            scores = {\"rmse\": rmse, \"mae\": mae, \"r2\": r2}\n",
     "            save_json(path=Path(self.config.metric_file_name), data=scores)\n",
     "\n",
     "            mlflow.log_params(self.config.all_params)\n",
     "\n",
-    "            mlflow.log_metric(\"rmse\", rmse)\n",
-    "            mlflow.log_metric(\"r2\", r2)\n",
-    "            mlflow.log_metric(\"mae\", mae)\n",
+    "            mlflow.log_metric(\"precision\", scores[\"precision\"])\n",
+    "            mlflow.log_metric(\"recall\", scores[\"recall\"])\n",
+    "            mlflow.log_metric(\"f1_score\", scores[\"f1_score\"])\n",
     "\n",
     "\n",
     "            # Model registry does not work with file store\n",
@@ -204,7 +208,7 @@
     "                # There are other ways to use the Model Registry, which depends on the use case,\n",
     "                # please refer to the doc for more information:\n",
     "                # https://mlflow.org/docs/latest/model-registry.html#api-workflow\n",
-    "                mlflow.sklearn.log_model(model, \"model\", registered_model_name=\"ElasticnetModel\")\n",
+    "                mlflow.sklearn.log_model(model, \"model\", registered_model_name=\"RandomForestModel\")\n",
     "            else:\n",
     "                mlflow.sklearn.log_model(model, \"model\")\n",
     "\n",
